# wiki-cite

./: .env.example  .gitignore  .pylintrc  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  config.yaml  pyproject.toml  pytest.ini  requirements.txt  setup.py
data/category_expansions/: politics-of-the-united-states.json
docs/design-plans/: 2026-07-08-4-agentic-source-search.md  2026-07-08-5-outcomes-feedback-loop.md  2026-07-08-6-topic-category-filter.md  2026-07-10-9-stats-dashboard-revert-tracking.md  2026-07-12-10-subcategory-aware-topic-filter.md  2026-07-14-18-prefilter-offtopic-candidates.md  2026-07-18-16-backlink-citation-discovery.md
docs/issues/: 10-subcategory-aware-topic-filter.md  12-queued-review.md  14-next-in-queue-link.md  15-auto-fill-queue.md  16-backlink-citation-discovery.md  18-prefilter-offtopic-candidates.md  19-queue-clear-pushed.md  5-outcomes-feedback-loop.md  6-topic-category-filter.md  7-wikipedia-sourcing-policy-prompt.md  8-dashboard-contrast-panes.md  9-stats-dashboard-revert-tracking.md
examples/: simple_usage.py
tests/: __init__.py  test_agent.py  test_article_picker.py  test_category_discovery.py  test_cli.py  test_config.py  test_guardrails.py  test_models.py  test_revert_checker.py  test_seen_store.py  test_source_finder.py  test_stats.py  test_web_app.py  test_wikipedia_push.py
wiki_cite/: __init__.py  agent.py  article_picker.py  category_discovery.py  cli.py  config.py  guardrails.py  models.py  revert_checker.py  seen_store.py  source_finder.py  stats.py  web_app.py  wikipedia_push.py
wiki_cite/templates/: base.html  (+3 more)
(+49 files in other folders)
