[project]
name = "wiki-cite"
version = "0.1.0"
description = "A tool for adding citations and cleanup to Wikipedia stub articles"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.34.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "mwclient>=0.10.1",
    "mwparserfromhell>=0.6.4",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "nltk>=3.8.1",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
]

[project.scripts]
wiki-cite = "wiki_cite.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.7",
    "bandit>=1.7.9",
    "pip-audit>=2.7",
    "detect-secrets>=1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wiki_cite"]

[tool.ruff]
line-length = 300

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["E402"]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers --cov=wiki_cite --cov-report=term-missing --cov-branch"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
